--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -1,31 +1,19 @@
-<!DOCTYPE html>
-
-<html> 
-
+<!doctype html>
+<html>
   <head>
     <meta charset="utf-8">
+    <title>Checkers</title>
     <link rel="stylesheet" href="/css/style.css">
-    <title>Checkerboard</title>
   </head>
-
   <body>
-    <div>
-      <table>
-        <% var bg, getsPiece = false, url %>
-          <% for(var i = 1; i < 9; i++) { %>
-            <tr class="tr<%= i % 2 %>">
-              <% for(var j = 1; j < 9; j++) { %>
-                <% if(i%2===1){ %>
-                  <% bg = (j%2===1) ? 'white' : 'black' %>
-                <% }else{ %>
-                  <% bg = (j%2===1) ? 'black' : 'white' %>
-                <% } %>
-            <td class="td<%= j%2 %>"></td>
-              <% } %>
-            </tr>
+    <table>
+      <% for(var i = 0; i < 8; i++){ %>
+        <tr>
+          <% for(var j = 0; j < 8; j++){ %>
+            <td></td>
           <% } %>
-      </table>
-    </div>
+        </tr>
+      <% } %>
+    </table>
   </body>
-
 </html>
